@@ -1,3 +1,6 @@
+2012-12-28
+ * JSONRequest class
+
 2012-12-27
  * hide/show milliseconds in time differences
 
